Fix for input z-index

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ input[type="number"] {
   font: inherit;
   outline: 0;
   padding: 1rem;
+  position: relative;
   width: 100%;
 }
 
